# agent-os

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.githooks/: pre-commit
docs/: README.md  dev-loops.md  guardrails.md  roadmap.md
kernel/: .golangci.yml  README.md  go.mod
proto/: ingest.proto
python/: .gitignore  .importlinter  pyproject.toml
python/_credential_blind_fixtures/: __init__.py  env_secret_reader.py  hermes_credential_writer.py  provider_client.py
python/agentos_shim/: __init__.py  shim.py
python/tests/: test_credential_blind.py  test_governed_boundary.py
python/tests/fixtures/: bundle_ref_proposal.json
scripts/: act-live-gmail.mjs  act-live-gmail.test.ts  act5-live-browser.mjs  agt-live-e2e.mjs  agt-proto-check.sh  agt-proto-gen.sh  build-verifier-release.sh  build-verifier-release.test.sh  e2e-live-agt.sh  e2e-live-browser.sh  e2e-live-capstone.sh  e2e-live-desktop-hermes.sh  e2e-live-developer.sh  e2e-live-enterprise.sh  e2e-live-exec-mcp-stdio.sh  e2e-live-exec-mcp.sh  e2e-live-gmail.sh  e2e-live-hermes-desktop.sh  e2e-live-hermes.sh  e2e-live-kernel-verify.sh  e2e-live-kernel.sh  e2e-live-nemoclaw.sh  e2e-live-partition-verify.sh  e2e-live-restore.sh  e2e-live-spendguard.sh  e2e-live-substrate-exec.sh  gen-golden-vectors.mjs  install-hermes-desktop.sh  launcher-check.mjs  launcher-check.test.ts  openshell-proto-check.sh  proto-check.sh  proto-gen.sh  scan_secrets.sh  spendguard-live-e2e.mjs  spendguard-proto-check.sh  (+5 more)
(+659 files in other folders)
